fix: gap 스타일 수정

--- a/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourse.module.scss
+++ b/src/pages/GraduationCalculatorPage/components/GeneralCourse/GeneralCourse.module.scss
@@ -72,7 +72,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     border-radius: 8px;
     font-family: Pretendard, sans-serif;
     font-size: 16px;
